parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> automata
Rule 1     automata -> include automata
Rule 2     automata -> function automata
Rule 3     automata -> definition automata
Rule 4     automata -> instantiation automata
Rule 5     automata -> strong_non_blocking automata
Rule 6     automata -> include
Rule 7     automata -> function
Rule 8     automata -> definition
Rule 9     automata -> instantiation
Rule 10    automata -> strong_non_blocking
Rule 11    automata -> error
Rule 12    include -> INCLUDE FILE
Rule 13    strong_non_blocking -> STRONG_NON_BLOCKING LEFT_BRACKET names RIGHT_BRACKET
Rule 14    definition -> PROCESS NAME inner
Rule 15    definition -> ENVIRONMENT NAME inner
Rule 16    definition -> LIVENESS NAME inner
Rule 17    definition -> SAFETY NAME inner
Rule 18    inner -> LEFT_BRACE optional_states optional_input_states optional_output_states inputs optional_input_enabled outputs initial optional_accepting edges RIGHT_BRACE
Rule 19    inputs -> INPUTS LEFT_BRACKET names RIGHT_BRACKET
Rule 20    optional_input_enabled -> INPUT_ENABLED LEFT_BRACKET names RIGHT_BRACKET
Rule 21    optional_input_enabled -> <empty>
Rule 22    outputs -> OUTPUTS LEFT_BRACKET names RIGHT_BRACKET
Rule 23    optional_states -> STATES LEFT_BRACKET names RIGHT_BRACKET
Rule 24    optional_states -> <empty>
Rule 25    optional_input_states -> INPUT_STATES LEFT_BRACKET names RIGHT_BRACKET
Rule 26    optional_input_states -> <empty>
Rule 27    optional_output_states -> OUTPUT_STATES LEFT_BRACKET names RIGHT_BRACKET
Rule 28    optional_output_states -> <empty>
Rule 29    optional_accepting -> ACCEPTING LEFT_BRACKET names RIGHT_BRACKET
Rule 30    optional_accepting -> <empty>
Rule 31    instantiation -> NAME EQUALS NAME LEFT_PAREN names RIGHT_PAREN
Rule 32    function -> PROCESS NAME LEFT_PAREN names RIGHT_PAREN inner
Rule 33    function -> ENVIRONMENT NAME LEFT_PAREN names RIGHT_PAREN inner
Rule 34    function -> LIVENESS NAME LEFT_PAREN names RIGHT_PAREN inner
Rule 35    function -> SAFETY NAME LEFT_PAREN names RIGHT_PAREN inner
Rule 36    names -> NAME COMMA names
Rule 37    names -> NAME
Rule 38    names -> <empty>
Rule 39    initial -> NAME NAME
Rule 40    edges -> edge edges
Rule 41    edges -> <empty>
Rule 42    edge -> NAME NAME SEND NAME
Rule 43    edge -> NAME NAME RECEIVE NAME
Rule 44    edge -> NAME NAME SEND NAME STRONG_FAIRNESS
Rule 45    edge -> NAME NAME RECEIVE NAME STRONG_FAIRNESS

Terminals, with rules where they appear

ACCEPTING            : 29
COMMA                : 36
ENVIRONMENT          : 15 33
EQUALS               : 31
FILE                 : 12
INCLUDE              : 12
INPUTS               : 19
INPUT_ENABLED        : 20
INPUT_STATES         : 25
LEFT_BRACE           : 18
LEFT_BRACKET         : 13 19 20 22 23 25 27 29
LEFT_PAREN           : 31 32 33 34 35
LIVENESS             : 16 34
NAME                 : 14 15 16 17 31 31 32 33 34 35 36 37 39 39 42 42 42 43 43 43 44 44 44 45 45 45
OUTPUTS              : 22
OUTPUT_STATES        : 27
PROCESS              : 14 32
RECEIVE              : 43 45
RIGHT_BRACE          : 18
RIGHT_BRACKET        : 13 19 20 22 23 25 27 29
RIGHT_PAREN          : 31 32 33 34 35
SAFETY               : 17 35
SEND                 : 42 44
STATES               : 23
STRONG_FAIRNESS      : 44 45
STRONG_NON_BLOCKING  : 13
error                : 11

Nonterminals, with rules where they appear

automata             : 1 2 3 4 5 0
definition           : 3 8
edge                 : 40
edges                : 18 40
function             : 2 7
include              : 1 6
initial              : 18
inner                : 14 15 16 17 32 33 34 35
inputs               : 18
instantiation        : 4 9
names                : 13 19 20 22 23 25 27 29 31 32 33 34 35 36
optional_accepting   : 18
optional_input_enabled : 18
optional_input_states : 18
optional_output_states : 18
optional_states      : 18
outputs              : 18
strong_non_blocking  : 5 10

Parsing method: LALR

state 0

    (0) S' -> . automata
    (1) automata -> . include automata
    (2) automata -> . function automata
    (3) automata -> . definition automata
    (4) automata -> . instantiation automata
    (5) automata -> . strong_non_blocking automata
    (6) automata -> . include
    (7) automata -> . function
    (8) automata -> . definition
    (9) automata -> . instantiation
    (10) automata -> . strong_non_blocking
    (11) automata -> . error
    (12) include -> . INCLUDE FILE
    (32) function -> . PROCESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (33) function -> . ENVIRONMENT NAME LEFT_PAREN names RIGHT_PAREN inner
    (34) function -> . LIVENESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (35) function -> . SAFETY NAME LEFT_PAREN names RIGHT_PAREN inner
    (14) definition -> . PROCESS NAME inner
    (15) definition -> . ENVIRONMENT NAME inner
    (16) definition -> . LIVENESS NAME inner
    (17) definition -> . SAFETY NAME inner
    (31) instantiation -> . NAME EQUALS NAME LEFT_PAREN names RIGHT_PAREN
    (13) strong_non_blocking -> . STRONG_NON_BLOCKING LEFT_BRACKET names RIGHT_BRACKET

    error           shift and go to state 14
    INCLUDE         shift and go to state 8
    PROCESS         shift and go to state 11
    ENVIRONMENT     shift and go to state 1
    LIVENESS        shift and go to state 12
    SAFETY          shift and go to state 13
    NAME            shift and go to state 10
    STRONG_NON_BLOCKING shift and go to state 7

    function                       shift and go to state 6
    definition                     shift and go to state 9
    instantiation                  shift and go to state 2
    strong_non_blocking            shift and go to state 3
    automata                       shift and go to state 4
    include                        shift and go to state 5

state 1

    (33) function -> ENVIRONMENT . NAME LEFT_PAREN names RIGHT_PAREN inner
    (15) definition -> ENVIRONMENT . NAME inner

    NAME            shift and go to state 15


state 2

    (4) automata -> instantiation . automata
    (9) automata -> instantiation .
    (1) automata -> . include automata
    (2) automata -> . function automata
    (3) automata -> . definition automata
    (4) automata -> . instantiation automata
    (5) automata -> . strong_non_blocking automata
    (6) automata -> . include
    (7) automata -> . function
    (8) automata -> . definition
    (9) automata -> . instantiation
    (10) automata -> . strong_non_blocking
    (11) automata -> . error
    (12) include -> . INCLUDE FILE
    (32) function -> . PROCESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (33) function -> . ENVIRONMENT NAME LEFT_PAREN names RIGHT_PAREN inner
    (34) function -> . LIVENESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (35) function -> . SAFETY NAME LEFT_PAREN names RIGHT_PAREN inner
    (14) definition -> . PROCESS NAME inner
    (15) definition -> . ENVIRONMENT NAME inner
    (16) definition -> . LIVENESS NAME inner
    (17) definition -> . SAFETY NAME inner
    (31) instantiation -> . NAME EQUALS NAME LEFT_PAREN names RIGHT_PAREN
    (13) strong_non_blocking -> . STRONG_NON_BLOCKING LEFT_BRACKET names RIGHT_BRACKET

    $end            reduce using rule 9 (automata -> instantiation .)
    error           shift and go to state 14
    INCLUDE         shift and go to state 8
    PROCESS         shift and go to state 11
    ENVIRONMENT     shift and go to state 1
    LIVENESS        shift and go to state 12
    SAFETY          shift and go to state 13
    NAME            shift and go to state 10
    STRONG_NON_BLOCKING shift and go to state 7

    function                       shift and go to state 6
    definition                     shift and go to state 9
    instantiation                  shift and go to state 2
    strong_non_blocking            shift and go to state 3
    automata                       shift and go to state 16
    include                        shift and go to state 5

state 3

    (5) automata -> strong_non_blocking . automata
    (10) automata -> strong_non_blocking .
    (1) automata -> . include automata
    (2) automata -> . function automata
    (3) automata -> . definition automata
    (4) automata -> . instantiation automata
    (5) automata -> . strong_non_blocking automata
    (6) automata -> . include
    (7) automata -> . function
    (8) automata -> . definition
    (9) automata -> . instantiation
    (10) automata -> . strong_non_blocking
    (11) automata -> . error
    (12) include -> . INCLUDE FILE
    (32) function -> . PROCESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (33) function -> . ENVIRONMENT NAME LEFT_PAREN names RIGHT_PAREN inner
    (34) function -> . LIVENESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (35) function -> . SAFETY NAME LEFT_PAREN names RIGHT_PAREN inner
    (14) definition -> . PROCESS NAME inner
    (15) definition -> . ENVIRONMENT NAME inner
    (16) definition -> . LIVENESS NAME inner
    (17) definition -> . SAFETY NAME inner
    (31) instantiation -> . NAME EQUALS NAME LEFT_PAREN names RIGHT_PAREN
    (13) strong_non_blocking -> . STRONG_NON_BLOCKING LEFT_BRACKET names RIGHT_BRACKET

    $end            reduce using rule 10 (automata -> strong_non_blocking .)
    error           shift and go to state 14
    INCLUDE         shift and go to state 8
    PROCESS         shift and go to state 11
    ENVIRONMENT     shift and go to state 1
    LIVENESS        shift and go to state 12
    SAFETY          shift and go to state 13
    NAME            shift and go to state 10
    STRONG_NON_BLOCKING shift and go to state 7

    function                       shift and go to state 6
    definition                     shift and go to state 9
    instantiation                  shift and go to state 2
    strong_non_blocking            shift and go to state 3
    automata                       shift and go to state 17
    include                        shift and go to state 5

state 4

    (0) S' -> automata .



state 5

    (1) automata -> include . automata
    (6) automata -> include .
    (1) automata -> . include automata
    (2) automata -> . function automata
    (3) automata -> . definition automata
    (4) automata -> . instantiation automata
    (5) automata -> . strong_non_blocking automata
    (6) automata -> . include
    (7) automata -> . function
    (8) automata -> . definition
    (9) automata -> . instantiation
    (10) automata -> . strong_non_blocking
    (11) automata -> . error
    (12) include -> . INCLUDE FILE
    (32) function -> . PROCESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (33) function -> . ENVIRONMENT NAME LEFT_PAREN names RIGHT_PAREN inner
    (34) function -> . LIVENESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (35) function -> . SAFETY NAME LEFT_PAREN names RIGHT_PAREN inner
    (14) definition -> . PROCESS NAME inner
    (15) definition -> . ENVIRONMENT NAME inner
    (16) definition -> . LIVENESS NAME inner
    (17) definition -> . SAFETY NAME inner
    (31) instantiation -> . NAME EQUALS NAME LEFT_PAREN names RIGHT_PAREN
    (13) strong_non_blocking -> . STRONG_NON_BLOCKING LEFT_BRACKET names RIGHT_BRACKET

    $end            reduce using rule 6 (automata -> include .)
    error           shift and go to state 14
    INCLUDE         shift and go to state 8
    PROCESS         shift and go to state 11
    ENVIRONMENT     shift and go to state 1
    LIVENESS        shift and go to state 12
    SAFETY          shift and go to state 13
    NAME            shift and go to state 10
    STRONG_NON_BLOCKING shift and go to state 7

    function                       shift and go to state 6
    definition                     shift and go to state 9
    instantiation                  shift and go to state 2
    strong_non_blocking            shift and go to state 3
    automata                       shift and go to state 18
    include                        shift and go to state 5

state 6

    (2) automata -> function . automata
    (7) automata -> function .
    (1) automata -> . include automata
    (2) automata -> . function automata
    (3) automata -> . definition automata
    (4) automata -> . instantiation automata
    (5) automata -> . strong_non_blocking automata
    (6) automata -> . include
    (7) automata -> . function
    (8) automata -> . definition
    (9) automata -> . instantiation
    (10) automata -> . strong_non_blocking
    (11) automata -> . error
    (12) include -> . INCLUDE FILE
    (32) function -> . PROCESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (33) function -> . ENVIRONMENT NAME LEFT_PAREN names RIGHT_PAREN inner
    (34) function -> . LIVENESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (35) function -> . SAFETY NAME LEFT_PAREN names RIGHT_PAREN inner
    (14) definition -> . PROCESS NAME inner
    (15) definition -> . ENVIRONMENT NAME inner
    (16) definition -> . LIVENESS NAME inner
    (17) definition -> . SAFETY NAME inner
    (31) instantiation -> . NAME EQUALS NAME LEFT_PAREN names RIGHT_PAREN
    (13) strong_non_blocking -> . STRONG_NON_BLOCKING LEFT_BRACKET names RIGHT_BRACKET

    $end            reduce using rule 7 (automata -> function .)
    error           shift and go to state 14
    INCLUDE         shift and go to state 8
    PROCESS         shift and go to state 11
    ENVIRONMENT     shift and go to state 1
    LIVENESS        shift and go to state 12
    SAFETY          shift and go to state 13
    NAME            shift and go to state 10
    STRONG_NON_BLOCKING shift and go to state 7

    function                       shift and go to state 6
    definition                     shift and go to state 9
    instantiation                  shift and go to state 2
    strong_non_blocking            shift and go to state 3
    automata                       shift and go to state 19
    include                        shift and go to state 5

state 7

    (13) strong_non_blocking -> STRONG_NON_BLOCKING . LEFT_BRACKET names RIGHT_BRACKET

    LEFT_BRACKET    shift and go to state 20


state 8

    (12) include -> INCLUDE . FILE

    FILE            shift and go to state 21


state 9

    (3) automata -> definition . automata
    (8) automata -> definition .
    (1) automata -> . include automata
    (2) automata -> . function automata
    (3) automata -> . definition automata
    (4) automata -> . instantiation automata
    (5) automata -> . strong_non_blocking automata
    (6) automata -> . include
    (7) automata -> . function
    (8) automata -> . definition
    (9) automata -> . instantiation
    (10) automata -> . strong_non_blocking
    (11) automata -> . error
    (12) include -> . INCLUDE FILE
    (32) function -> . PROCESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (33) function -> . ENVIRONMENT NAME LEFT_PAREN names RIGHT_PAREN inner
    (34) function -> . LIVENESS NAME LEFT_PAREN names RIGHT_PAREN inner
    (35) function -> . SAFETY NAME LEFT_PAREN names RIGHT_PAREN inner
    (14) definition -> . PROCESS NAME inner
    (15) definition -> . ENVIRONMENT NAME inner
    (16) definition -> . LIVENESS NAME inner
    (17) definition -> . SAFETY NAME inner
    (31) instantiation -> . NAME EQUALS NAME LEFT_PAREN names RIGHT_PAREN
    (13) strong_non_blocking -> . STRONG_NON_BLOCKING LEFT_BRACKET names RIGHT_BRACKET

    $end            reduce using rule 8 (automata -> definition .)
    error           shift and go to state 14
    INCLUDE         shift and go to state 8
    PROCESS         shift and go to state 11
    ENVIRONMENT     shift and go to state 1
    LIVENESS        shift and go to state 12
    SAFETY          shift and go to state 13
    NAME            shift and go to state 10
    STRONG_NON_BLOCKING shift and go to state 7

    function                       shift and go to state 6
    definition                     shift and go to state 9
    instantiation                  shift and go to state 2
    strong_non_blocking            shift and go to state 3
    automata                       shift and go to state 22
    include                        shift and go to state 5

state 10

    (31) instantiation -> NAME . EQUALS NAME LEFT_PAREN names RIGHT_PAREN

    EQUALS          shift and go to state 23


state 11

    (32) function -> PROCESS . NAME LEFT_PAREN names RIGHT_PAREN inner
    (14) definition -> PROCESS . NAME inner

    NAME            shift and go to state 24


state 12

    (34) function -> LIVENESS . NAME LEFT_PAREN names RIGHT_PAREN inner
    (16) definition -> LIVENESS . NAME inner

    NAME            shift and go to state 25


state 13

    (35) function -> SAFETY . NAME LEFT_PAREN names RIGHT_PAREN inner
    (17) definition -> SAFETY . NAME inner

    NAME            shift and go to state 26


state 14

    (11) automata -> error .

    $end            reduce using rule 11 (automata -> error .)


state 15

    (33) function -> ENVIRONMENT NAME . LEFT_PAREN names RIGHT_PAREN inner
    (15) definition -> ENVIRONMENT NAME . inner
    (18) inner -> . LEFT_BRACE optional_states optional_input_states optional_output_states inputs optional_input_enabled outputs initial optional_accepting edges RIGHT_BRACE

    LEFT_PAREN      shift and go to state 28
    LEFT_BRACE      shift and go to state 27

    inner                          shift and go to state 29

state 16

    (4) automata -> instantiation automata .

    $end            reduce using rule 4 (automata -> instantiation automata .)


state 17

    (5) automata -> strong_non_blocking automata .

    $end            reduce using rule 5 (automata -> strong_non_blocking automata .)


state 18

    (1) automata -> include automata .

    $end            reduce using rule 1 (automata -> include automata .)


state 19

    (2) automata -> function automata .

    $end            reduce using rule 2 (automata -> function automata .)


state 20

    (13) strong_non_blocking -> STRONG_NON_BLOCKING LEFT_BRACKET . names RIGHT_BRACKET
    (36) names -> . NAME COMMA names
    (37) names -> . NAME
    (38) names -> .

    NAME            shift and go to state 30
    RIGHT_BRACKET   reduce using rule 38 (names -> .)

    names                          shift and go to state 31

state 21

    (12) include -> INCLUDE FILE .

    error           reduce using rule 12 (include -> INCLUDE FILE .)
    INCLUDE         reduce using rule 12 (include -> INCLUDE FILE .)
    PROCESS         reduce using rule 12 (include -> INCLUDE FILE .)
    ENVIRONMENT     reduce using rule 12 (include -> INCLUDE FILE .)
    LIVENESS        reduce using rule 12 (include -> INCLUDE FILE .)
    SAFETY          reduce using rule 12 (include -> INCLUDE FILE .)
    NAME            reduce using rule 12 (include -> INCLUDE FILE .)
    STRONG_NON_BLOCKING reduce using rule 12 (include -> INCLUDE FILE .)
    $end            reduce using rule 12 (include -> INCLUDE FILE .)


state 22

    (3) automata -> definition automata .

    $end            reduce using rule 3 (automata -> definition automata .)


state 23

    (31) instantiation -> NAME EQUALS . NAME LEFT_PAREN names RIGHT_PAREN

    NAME            shift and go to state 32


state 24

    (32) function -> PROCESS NAME . LEFT_PAREN names RIGHT_PAREN inner
    (14) definition -> PROCESS NAME . inner
    (18) inner -> . LEFT_BRACE optional_states optional_input_states optional_output_states inputs optional_input_enabled outputs initial optional_accepting edges RIGHT_BRACE

    LEFT_PAREN      shift and go to state 33
    LEFT_BRACE      shift and go to state 27

    inner                          shift and go to state 34

state 25

    (34) function -> LIVENESS NAME . LEFT_PAREN names RIGHT_PAREN inner
    (16) definition -> LIVENESS NAME . inner
    (18) inner -> . LEFT_BRACE optional_states optional_input_states optional_output_states inputs optional_input_enabled outputs initial optional_accepting edges RIGHT_BRACE

    LEFT_PAREN      shift and go to state 35
    LEFT_BRACE      shift and go to state 27

    inner                          shift and go to state 36

state 26

    (35) function -> SAFETY NAME . LEFT_PAREN names RIGHT_PAREN inner
    (17) definition -> SAFETY NAME . inner
    (18) inner -> . LEFT_BRACE optional_states optional_input_states optional_output_states inputs optional_input_enabled outputs initial optional_accepting edges RIGHT_BRACE

    LEFT_PAREN      shift and go to state 37
    LEFT_BRACE      shift and go to state 27

    inner                          shift and go to state 38

state 27

    (18) inner -> LEFT_BRACE . optional_states optional_input_states optional_output_states inputs optional_input_enabled outputs initial optional_accepting edges RIGHT_BRACE
    (23) optional_states -> . STATES LEFT_BRACKET names RIGHT_BRACKET
    (24) optional_states -> .

    STATES          shift and go to state 39
    INPUT_STATES    reduce using rule 24 (optional_states -> .)
    OUTPUT_STATES   reduce using rule 24 (optional_states -> .)
    INPUTS          reduce using rule 24 (optional_states -> .)

    optional_states                shift and go to state 40

state 28
